correct somes bug on mobiles

--- a/assets/css/_responsive.scss
+++ b/assets/css/_responsive.scss
@@ -130,7 +130,7 @@
   }
 }
 
-@media screen and (max-width: 350px)
+@media screen and (max-width: 450px)
 {
   body {
   font-size: 0.9em;
